mise Ajour de Collaborateur P.E

--- a/source/ProjetFinalEval/Views/CollaborateurPE/Details.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurPE/Details.cshtml
@@ -44,7 +44,7 @@
                         @Html.DisplayFor(model => model.NOMPE) @Html.DisplayFor(model => model.PRENOMPE)
                     </div>
                     <div class="profile-usertitle-job">
-                        @Html.DisplayFor(model => model.EMAILPE)
+                        @Html.DisplayFor(model => model.aspnetusers.Email)
                     </div>
                     <div class="profile-usertitle-job">
                         @Html.DisplayFor(model => model.STATUT)
