--- a/source/ProjetFinalEval/Views/CollaborateurPE/Create.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurPE/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjetFinalEval.collaborateurpe
+﻿@model ProjetFinalEval.Models.RegisterViewModel
 @{
     ViewBag.Title = "Ajouter un nouveau collaborateur en période d'essai";
     Layout = "~/Views/Shared/_LayoutStablePage1.cshtml";
@@ -60,7 +60,8 @@
                             <div class="col-md-4">
                                 <div class="input-icon right">
                                     <i class="fa"></i>
-                                    <input type="text" name="NOMPE" data-required="1" class="form-control" required="required" />
+                                    @Html.TextBoxFor(M => M.NOMPE, new { @class = "form-control", required = "required" })
+                                    
                                 </div>
                             </div>
                         </div>
@@ -73,7 +74,8 @@
                             <div class="col-md-4">
                                 <div class="input-icon right">
                                     <i class="fa"></i>
-                                    <input type="text" name="PRENOMPE" data-required="1" class="form-control" required="required" />
+                                    @Html.TextBoxFor(M => M.PRENOMPE, new { @class = "form-control",required="required" })
+                                    
                                 </div>
                             </div>
                         </div>
@@ -90,12 +92,43 @@
                                     </span>
                                     <div class="input-icon right">
                                         <i class="fa"></i>
-                                        <input type="email" name="EMAILPE" class="form-control" placeholder="Email Address" required="required">
+                                        @Html.TextBoxFor(M => M.Email, new {type="email", @class = "form-control",placeholder="Email Address" ,required="required"  })
+                                       
                                     </div>
                                 </div>
                             </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">
+                                    Mots de Passe<span class="required">
+                                        *
+                                    </span>
+                                </label>
+                                <div class="col-md-4">
+                                    <div class="input-icon right">
+                                        <i class="fa"></i>
+                                        @Html.TextBoxFor(M => M.Password, new { type = "password", @class = "form-control", @Value = "P@ssW0rd" })
 
-                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">
+                                    Confirme Mots de Passe<span class="required">
+                                        *
+                                    </span>
+                                </label>
+                                <div class="col-md-4">
+                                    <div class="input-icon right">
+                                        <i class="fa"></i>
+                                        @Html.TextBoxFor(M => M.ConfirmPassword, new { @type = "password", @class = "form-control", @Value = "P@ssW0rd" })
+
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            
+                        
                         <div class="form-group">
                             <label class="col-md-3 control-label">
                                 Image<span class="required">
@@ -135,15 +168,16 @@
                             <div class="col-md-4">
                                 <div class="radio-list" data-error-container="#form_2_membership_error">
                                     <label>
-                                        <input type="radio" name="STATUT" value="XXX" />
+                                        @Html.TextBoxFor(M => M.STATUT, new { @Value = "XXX", @type = "radio" })
+                                        
                                         xxx
                                     </label>
                                     <label>
-                                        <input type="radio" name="STATUT" value="YYY" />
+                                        @Html.TextBoxFor(M => M.STATUT, new { @Value = "YYY", @type = "radio" })
                                         yyy
                                     </label>
                                     <label>
-                                        <input type="radio" name="STATUT" value="ZZZ" />
+                                        @Html.TextBoxFor(M => M.STATUT, new { @Value = "ZZZ", @type = "radio" })
                                         zzz
                                     </label>
                                 </div>
