--- a/source/ProjetFinalEval/Views/CollaborateurPE/Edit.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurPE/Edit.cshtml
@@ -38,7 +38,7 @@
                         @Html.DisplayFor(model => model.NOMPE) @Html.DisplayFor(model => model.PRENOMPE)
                     </div>
                     <div class="profile-usertitle-job">
-                        @Html.DisplayFor(model => model.EMAILPE)
+                        @Html.DisplayFor(model => model.aspnetusers.Email)
                     </div>
                     <div class="profile-usertitle-job">
                         @Html.DisplayFor(model => model.STATUT)
@@ -108,9 +108,9 @@
 
                                         </div>
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.EMAILPE, "Email", htmlAttributes: new { @class = "control-label col-md-2" })
-                                            @Html.EditorFor(model => model.EMAILPE, new { htmlAttributes = new { @class = "form-control" } })
-                                            @Html.ValidationMessageFor(model => model.EMAILPE, "", new { @class = "text-danger" })
+                                            @Html.LabelFor(model => model.aspnetusers.Email, "Email", htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.EditorFor(model => model.aspnetusers.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.aspnetusers.Email, "", new { @class = "text-danger" })
                                         </div>
 
                                         <div class="form-group">
