--- a/source/ProjetFinalEval/Views/CollaborateurPE/Index.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurPE/Index.cshtml
@@ -88,7 +88,7 @@
                                 @Html.DisplayFor(modelItem => item.PRENOMPE)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.EMAILPE)
+                                @Html.DisplayFor(modelItem => item.aspnetusers.Email)
                             </td>
 
                             <td>
