realisation de l'authentification

--- a/source/ProjetFinalEval/Views/Home/Accueil.cshtml
+++ b/source/ProjetFinalEval/Views/Home/Accueil.cshtml
@@ -28,7 +28,7 @@
                     Collaborateur Titulaire
                 </div>
                 <div class="number">
-                    6
+                    @ViewBag.cc
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                     Collaborateur P.E
                 </div>
                 <div class="number">
-                    452
+                    @ViewBag.bb
                 </div>
             </div>
         </div>    
