--- a/source/ProjetFinalEval/Views/CollaborateurPE/Edit.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurPE/Edit.cshtml
@@ -109,7 +109,7 @@
                                         </div>
                                         <div class="form-group">
                                             @Html.LabelFor(model => model.aspnetusers.Email, "Email", htmlAttributes: new { @class = "control-label col-md-2" })
-                                            @Html.EditorFor(model => model.aspnetusers.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.EditorFor(model => model.aspnetusers.Email, new { htmlAttributes = new { @class = "form-control", disabled = true } })
                                             @Html.ValidationMessageFor(model => model.aspnetusers.Email, "", new { @class = "text-danger" })
                                         </div>
 
