--- a/source/ProjetFinalEval/Views/Shared/_LayoutStablePage1.cshtml
+++ b/source/ProjetFinalEval/Views/Shared/_LayoutStablePage1.cshtml
@@ -34,6 +34,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN PAGE LEVEL STYLES -->
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/")global/plugins/select2/select2.css" />
+    <link href="@Url.Content("~/Content/")admin/pages/css/login-soft.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/")global/plugins/bootstrap-wysihtml5/bootstrap-wysihtml5.css" />
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/")global/plugins/bootstrap-markdown/css/bootstrap-markdown.min.css">
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/")global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" />
