--- a/source/ProjetFinalEval/Views/CollaborateurPE/Create.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurPE/Create.cshtml
@@ -3,21 +3,18 @@
     ViewBag.Title = "Ajouter un nouveau collaborateur en période d'essai";
     Layout = "~/Views/Shared/_LayoutStablePage1.cshtml";
 }
-<div class="page-bar">
-    <ul class="page-breadcrumb">
-        <li>
-            <i class="fa fa-home"></i>
-            <a href="~/Home/Accueil">Accueil</a>
-            <i class="fa fa-angle-right"></i>
-            <a href="~/CollaborateurPE/Index">List des COllPE</a>
-            <i class="fa fa-angle-right"></i>
-            <a href="~/CollaborateurPE/Create">Ajouter nouveau CollPE</a>
-            <i class="fa fa-angle-right"></i>
-        </li>
+<ul class="page-breadcrumb breadcrumb">
+    <li>
 
-    </ul>
+        <a href="~/Home/Accueil">Accueil</a>
+        <i class="fa fa-circle"></i>
+        <a href="~/CollaborateurPE/Index">List des COllPE</a>
+        <i class="fa fa-circle"></i>
+        <a href="~/CollaborateurPE/Create">Ajouter nouveau CollPE</a>
+        <i class="fa fa-circle"></i>
+    </li>
 
-</div>
+</ul>
 
 <div class="row">
     <div class="col-md-12">
