--- a/source/ProjetFinalEval/Views/CollaborateurTitulaire/Delete.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurTitulaire/Delete.cshtml
@@ -105,13 +105,13 @@
 
                     <div class="form-group">
 
-                        @Html.LabelFor(model => model.EMAIL, "Email", htmlAttributes: new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(model => model.aspnetusers.Email, "Email", htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-4">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
-                                @Html.EditorFor(model => model.EMAIL, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                @Html.EditorFor(model => model.aspnetusers.Email, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
 
                             </div>
                         </div>
