--- a/source/ProjetFinalEval/Views/CollaborateurTitulaire/Edit.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurTitulaire/Edit.cshtml
@@ -115,12 +115,12 @@
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                @Html.LabelFor(model => model.EMAIL, "Email", htmlAttributes: new { @class = "control-label" })
+                                                @Html.LabelFor(model => model.aspnetusers.Email, "Email", htmlAttributes: new { @class = "control-label" })
                                                 <div class="input-group">
                                                     <span class="input-group-addon">
                                                         <i class="fa fa-envelope"></i>
                                                     </span>
-                                                    @Html.EditorFor(model => model.EMAIL, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.EditorFor(model => model.aspnetusers.Email, new { htmlAttributes = new { @class = "form-control" } })
                                                 </div>
                                             </div>
                                             <div class="form-group">
