--- a/source/ProjetFinalEval/Views/CollaborateurTitulaire/Create.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurTitulaire/Create.cshtml
@@ -49,7 +49,7 @@
                     </div>
                     <div class="alert alert-success display-hide">
                         <button class="close" data-close="alert"></button>
-                        Your form validation is successful!
+                        Le Collaborateur a ete ajouter avec succes
                     </div>
                     <div class="form-group">
                         <label class="col-md-3 control-label">
@@ -93,7 +93,7 @@
 
                     <div class="form-group">
                         <label class="control-label col-md-3">
-                            Name <span class="required">
+                            Nom <span class="required">
                                 *
                             </span>
                         </label>
@@ -122,7 +122,7 @@
 
                     <div class="form-group">
                         <label class="col-md-3 control-label">
-                            Image<span class="required">
+                            Image <span class="required">
                                 *
                             </span>
                         </label>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-3">
-                            Flag Evaluation
+                           Role
                         </label>
                         <div class="col-md-4">
                             <div class="radio-list" data-error-container="#form_2_membership_error">
