--- a/source/ProjetFinalEval/Views/CollaborateurTitulaire/Delete.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurTitulaire/Delete.cshtml
@@ -85,7 +85,7 @@
 
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.NOM, "Name", htmlAttributes: new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(model => model.NOM, "Nom", htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-4">
                             <div class="input-icon right">
                                 <i class="fa"></i>
