--- a/source/ProjetFinalEval/Views/CollaborateurTitulaire/Edit.cshtml
+++ b/source/ProjetFinalEval/Views/CollaborateurTitulaire/Edit.cshtml
@@ -41,6 +41,9 @@
 
                     </div>
                     <div class="profile-usertitle-job">
+                        @Html.DisplayFor(model => model.aspnetusers.Email)
+                    </div>
+                    <div class="profile-usertitle-job">
                         @Html.DisplayFor(model => model.fonction.NOMFONCTION)
                     </div>
                 </div>
@@ -48,8 +51,7 @@
                 <!-- SIDEBAR BUTTONS -->
                 <div class="profile-userbuttons">
 
-                    @Html.ActionLink("Edit", "Edit", "CollaborateurTitulaire", new { id = Model.IDCOLLABORATEURTITULAIRE }, new { @class = "btn btn-circle green-haze btn-sm" })
-                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-circle btn-danger btn-sm" })
+                        @Html.ActionLink("Retourne a la List", "Index", null, new { @class = "btn btn-circle btn-danger btn-sm" })
 
                 </div>
                 <!-- END SIDEBAR BUTTONS -->
@@ -73,10 +75,7 @@
                 <div class="col-md-12">
                     <div class="portlet light">
                         <div class="portlet-title tabbable-line">
-                            <div class="caption caption-md">
-                                <i class="icon-globe theme-font hide"></i>
-                                <span class="caption-subject font-blue-madison bold uppercase">Profile Account</span>
-                            </div>
+
                             <ul class="nav nav-tabs">
                                 <li class="active">
                                     <a href="#tab_1_1" data-toggle="tab">Personal Info</a>
@@ -90,18 +89,21 @@
                             <div class="tab-content">
                                 <!-- PERSONAL INFO TAB -->
                                 <div class="tab-pane active" id="tab_1_1">
+                                    <div class="caption caption-md">
+                                        <i class="icon-globe theme-font hide"></i>
+                                        <span class="caption-subject font-blue-madison bold uppercase">Profile Collaborateur Titulaire</span>
+                                    </div>
                                     @using (Html.BeginForm())
                                     {
                                         @Html.AntiForgeryToken()
 
                                         <div class="form-group">
-                                            <h4>collaborateurtitulaire</h4>
                                             <hr />
                                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                             @Html.HiddenFor(model => model.IDCOLLABORATEURTITULAIRE)
 
                                             <div class="form-group">
-                                                @Html.LabelFor(model => model.NOM, "Name", htmlAttributes: new { @class = "control-label" })
+                                                @Html.LabelFor(model => model.NOM, "Nom", htmlAttributes: new { @class = "control-label" })
                                                 <div class="input-icon right">
                                                     <i class="fa"></i>
                                                     @Html.EditorFor(model => model.NOM, new { htmlAttributes = new { @class = "form-control", required = "required" } })
@@ -115,12 +117,12 @@
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                @Html.LabelFor(model => model.aspnetusers.Email, "Email", htmlAttributes: new { @class = "control-label" })
+                                                @Html.LabelFor(model => model.aspnetusers.Email, "Email", htmlAttributes: new { @class = "control-label"})
                                                 <div class="input-group">
                                                     <span class="input-group-addon">
                                                         <i class="fa fa-envelope"></i>
                                                     </span>
-                                                    @Html.EditorFor(model => model.aspnetusers.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.EditorFor(model => model.aspnetusers.Email, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -130,9 +132,11 @@
                                             <div class="form-group">
                                                 @Html.LabelFor(model => model.FLAGEVAL, "Evaluateur", htmlAttributes: new { @class = "control-label" })
                                                 <div class="checkbox">
+                                                    
                                                     @Html.EditorFor(model => model.FLAGEVAL)
                                                 </div>
                                             </div>
+
                                             <div class="form-actions">
                                                 <div class="row">
                                                     <div class="col-md-offset-3 col-md-9">
